--- a/FaceRecognition.ipynb
+++ b/FaceRecognition.ipynb
@@ -87,9 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LoadImage' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\bouen\\Desktop\\Projects\\Programming\\Python\\BWSI\\Week2\\BWSI_Visual_Capstone\\FaceRecognition.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bouen/Desktop/Projects/Programming/Python/BWSI/Week2/BWSI_Visual_Capstone/FaceRecognition.ipynb#ch0000005?line=0'>1</a>\u001b[0m not_face_dict \u001b[39m=\u001b[39m  {\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bouen/Desktop/Projects/Programming/Python/BWSI/Week2/BWSI_Visual_Capstone/FaceRecognition.ipynb#ch0000005?line=1'>2</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mnot_face\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m4\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bouen/Desktop/Projects/Programming/Python/BWSI/Week2/BWSI_Visual_Capstone/FaceRecognition.ipynb#ch0000005?line=2'>3</a>\u001b[0m }\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/bouen/Desktop/Projects/Programming/Python/BWSI/Week2/BWSI_Visual_Capstone/FaceRecognition.ipynb#ch0000005?line=3'>4</a>\u001b[0m not_face_paths \u001b[39m=\u001b[39m LoadImage\u001b[39m.\u001b[39mfilenames_from_dict(not_face_dict, \u001b[39m\"\u001b[39m\u001b[39mtest_images\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bouen/Desktop/Projects/Programming/Python/BWSI/Week2/BWSI_Visual_Capstone/FaceRecognition.ipynb#ch0000005?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(not_face_paths)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bouen/Desktop/Projects/Programming/Python/BWSI/Week2/BWSI_Visual_Capstone/FaceRecognition.ipynb#ch0000005?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m path \u001b[39min\u001b[39;00m not_face_paths:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'LoadImage' is not defined"
+     ]
+    }
+   ],
    "source": [
     "not_face_dict =  {\n",
     "    \"not_face\": 4\n",
